fix: add color property to footer button for improved visibility

--- a/styles/index.css
+++ b/styles/index.css
@@ -84,6 +84,7 @@ footer .buton button {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
+    color: black; 
 }
 
 
